--- a/UnivMobile/res/layout/activity_splash_screen.xml
+++ b/UnivMobile/res/layout/activity_splash_screen.xml
@@ -68,7 +68,10 @@
 				android:layout_alignParentRight="true"
 				android:layout_marginLeft="10dp"
 				android:layout_marginRight="25dp"
-				android:textSize="13dp"/>
+				android:layout_marginTop="5dp"
+				android:layout_marginBottom="5dp"
+				android:textSize="13dp"
+				/>
 
 			<Spinner
 				android:layout_marginLeft="25dp"
