added multiline support in splashscreen university list. fixed news list pull to refresh functionality. updated authentication dialog messages. fixes authentication dialog multiline.

--- a/UnivMobile/res/layout/view_spinner_item.xml
+++ b/UnivMobile/res/layout/view_spinner_item.xml
@@ -8,5 +8,5 @@
           android:paddingTop="4dp"
           android:paddingBottom="4dp"
           android:gravity="start"
-          android:ellipsize="none"
+		  android:singleLine="false"
 		  android:textSize="13dp"/>
