--- a/UnivMobile/res/layout/fragment_home.xml
+++ b/UnivMobile/res/layout/fragment_home.xml
@@ -25,8 +25,7 @@
 					android:layout_height="wrap_content"
 					android:adjustViewBounds="true"
 					android:scaleType="centerCrop"
-					android:id="@+id/main_article_image"
-					android:src="@drawable/ic_home_header"/>
+					android:id="@+id/main_article_image"/>
 
 				<TextView
 					android:layout_width="match_parent"
