--- a/UnivMobile/res/layout/fragment_geo_campus.xml
+++ b/UnivMobile/res/layout/fragment_geo_campus.xml
@@ -4,7 +4,7 @@
 				android:layout_height="match_parent"
 				tools:context="org.unpidf.univmobile.ui.fragments.GeoCampusFragment">
 
-	<com.google.android.gms.maps.MapView
+	<org.unpidf.univmobile.ui.views.MyCustomMapView
 		android:id="@+id/mapview"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -18,6 +18,8 @@
 		android:id="@+id/new_poi"
 		android:src="@drawable/ic_qr"
 		android:visibility="gone"/>
+
+
 
 	<org.unpidf.univmobile.ui.views.GeoCampusCategoriesView
 
@@ -42,4 +44,11 @@
 		android:layout_alignParentBottom="true"
 		android:visibility="invisible"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
 </RelativeLayout>
