--- a/UnivMobile/res/layout/view_action_bar.xml
+++ b/UnivMobile/res/layout/view_action_bar.xml
@@ -66,7 +66,7 @@
 			android:layout_weight="4"
 			android:orientation="vertical"
 			android:gravity="center_vertical|right"
-			android:visibility="gone">
+			android:visibility="visible">
 
 			<TextView
 				android:id="@+id/greetings"
