--- a/UnivMobile/res/layout/fragment_university_news.xml
+++ b/UnivMobile/res/layout/fragment_university_news.xml
@@ -1,62 +1,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@android:color/white">
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="vertical">
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:background="@color/geo_orange_light">
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textSize="16sp"
-				android:textColor="@android:color/white"
-				android:id="@+id/univ_name_textView"
-				android:textStyle="bold"
-				android:layout_margin="10dp" />
-		</LinearLayout>
-		<HorizontalScrollView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:id="@+id/container_horizontalScrollView"
-			android:background="@color/geo_orange_feed_background">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@android:color/white"
+              android:orientation="vertical">
 
-		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:id="@+id/feeds_container_linearLayout"
-			android:orientation="horizontal"></LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-		</HorizontalScrollView>
-	</LinearLayout>
-<android.support.v4.widget.SwipeRefreshLayout
-											  android:id="@+id/swipe_container"
-											  android:layout_width="match_parent"
-											  android:layout_height="match_parent"
-											  android:background="@android:color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/geo_orange_light">
 
-	<ListView
-		android:id="@+id/list_view"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:paddingLeft="10px"/>
+            <TextView
+                android:id="@+id/univ_name_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
 
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/no_results"
-		android:textSize="@dimen/title_size"
-		android:id="@+id/no_data"
-		android:gravity="center_horizontal"
-		android:textColor="@android:color/black"
-		android:paddingTop="10dp"
-		android:paddingBottom="10dp"
-		android:visibility="gone"/>
+        <HorizontalScrollView
+            android:id="@+id/container_horizontalScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/geo_orange_feed_background"
+            >
 
-</android.support.v4.widget.SwipeRefreshLayout>
+            <LinearLayout
+                android:id="@+id/feeds_container_linearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"></LinearLayout>
+
+        </HorizontalScrollView>
+    </LinearLayout>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="10px"/>
+
+        <TextView
+            android:id="@+id/no_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:text="@string/no_results"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/title_size"
+            android:visibility="gone"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
