--- a/UnivMobile/res/layout/fragment_university_news.xml
+++ b/UnivMobile/res/layout/fragment_university_news.xml
@@ -21,7 +21,8 @@
                 android:layout_margin="10dp"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:text="Act&apos;Universitaire" />
         </LinearLayout>
 
         <HorizontalScrollView
